# ffst

./: Data.hs  Main.hs  OptimizedLookup.hs  Parser.hs  Simulator.hs  Utils.hs  ffst.cabal  stack.yaml
executable/: Main.hs
test-suite/: Tests.hs
