Name:                ffst
Version:             0.1
Description:         Frankie's Finite State Technology
Author:              Frankie Robertson
Build-Type:          Simple
Cabal-Version:       >=1.10
Extra-Source-Files:
  transducers/omorfi-omor.analyse.hfst

library
  Exposed-Modules:
    Ffst
  Build-Depends:
    base >= 4 && < 5,
    binary,
    bytestring,
    pretty-show,
    containers,
    utf8-string,
    vector,
    monad-loops,
    transformers,
    errors,
    pretty-hex,
    data-binary-ieee754,
    set-monad
  Other-Modules:
    Parser,
    Simulator,
    OptimizedLookup,
    Data,
    Utils
  Hs-Source-Dirs:    library
  Ghc-Options:       -Wall
  Default-language:  Haskell2010

executable ffst-proc
  Main-Is:           Main.hs
  Build-Depends:
    base >= 4 && < 5,
    ffst -any
  Hs-Source-Dirs:    executable
  Ghc-Options:       -Wall
  Default-language:  Haskell2010

test-Suite omorfi
  Main-Is:          Tests.hs
  Type:             exitcode-stdio-1.0
  Build-depends:
    base >= 4 && < 5,
    bytestring,
    HUnit,
    utf8-string,
    ffst -any
  Hs-Source-Dirs:   test-suite
  Ghc-Options:      -Wall
  Default-language: Haskell2010
